2008-01-20  Inge Wallin  <inge@lysator.liu.se>

	Fix bug with max/min zoom by moving a check.
	* src/lib/MarbleWidget.cpp (MarbleWidgetPrivate): Remove
	m_minimumzoom, m_maximumzoom
	(MarbleWidget::zoomView): Check for over- and underflow, cleaning
	(MarbleWidget::zoomViewBy): Simplify by removing check.
	(misc functions): cleaning
	* src/lib/MarbleWidgetInputHandler.cpp (Misc functions): cleaning

2008-01-16  Inge Wallin  <inge@lysator.liu.se>

	Fix bug that made min/max zoom in .dgml files not work.
	* src/lib/TileCreator.cpp (open): Compare against lower cased
	names minimumzoom and maximumzoom.

2008-01-15  Inge Wallin  <inge@lysator.liu.se>

	Complete min/maximumZoom in .dgml files.
	* src/lib/MapTheme.cpp (open): Provide default values for
	minimumZoom and maxmimumZoom
	(open): bug fix in parsing.
	* src/lib/MarbleModel.h (setMinimumZoom, setMaximiumZoom): removed
	* src/lib/MarbleModel.cpp (minimumZoom, maximumZoom): Use values
	from MapTheme
	* src/lib/MarbleWidget.cpp (minimumZoom, maximumZoom): Use values
	from MarbleModel
	* src/lib/MarbleControlBox.cpp (MarbleControlBoxPrivate::m_minimumZoom):  removed
	(minimumZoom): use value from the widget.
	(changeZoom): don't use m_minimumzoom
	* src/ControlView.cpp (ControlView): Remove initialization of
	minimum zoom in the widget.

2008-01-14    Inge Wallin  <inge@lysator.liu.se>

	Continue with min and max zoom in .dgml files
	* src/lib/MapTheme.h (minimumZoom, maximumZoom): New methods
	* src/lib/MapTheme.cpp (open): New default for minimumZoom
	* src/lib/MarbleWidget.{h,cpp} (minumumZoom, maximumZoom,
	setMaximumZoom): new methods
	* src/lib/MarbleControlBox (selectTheme): dig out minimumZoom and
	maximumZoom from the widget.
	
2008-01-13  Inge Wallin  <inge@lysator.liu.se>

	Support minimumZoom and maximumZoom in .dgml files.
	* src/lib/MapTheme.h (m_minimumZoom, m_maximumZoom): new members
	* src/lib/MapTheme.cpp (open): Support miminumZoom and maximumZoom
	in .dgml files